--- a/src/site/resources/css/base.css
+++ b/src/site/resources/css/base.css
@@ -1,4 +1,18 @@
 
+#leftColumn {
+    max-width: 250px;
+}
+
+#bodyColumn {
+    display: block;
+    margin-left:20px;
+    max-width: 800px;
+}
+
+#poweredBy {
+    display: none;
+}
+
 
 a.externalLink[href^="https"] {
     background: none;
@@ -8,4 +22,17 @@ a.externalLink[href^="https"] {
 a.externalLink[href^="http"] {
     background: none;
     padding-right: 0px;
+}
+
+blockquote {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    line-height: 20px;
+    color: #333;
+}
+
+blockquote p {
+    margin: 0 0 10px;
+    margin-right: 7px;
+    margin-left: 7px;  
+    font-size: 14.5px;
 }
